tests/parser/fail/v22_fail_array_iteration_removed.ep
# COMPILE_FAIL: Expected LBRACE
fun main(): void {
    let xs = new i64[] { 1, 2 }
    for i in xs {
    }
}
